--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 numpy
 pandas
 matplotlib
+seaborn
 scikit-learn
-nltk
-spacy
-transformers
-torch
-tensorflow
-keras
 jupyter
-tqdm
+gymnasium
+stable-baselines3
+torch
+streamlit
+google-generativeai
